--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,59 +5,48 @@ version: 2.1
 # orbs
 #
 # Orbs used in this pipeline
-###
+##
 orbs:
-  slack: circleci/slack@4.12.5
-  pr-tools: mojaloop/pr-tools@0.1.10
-  github-release: h-matsuo/github-release@0.1.3
+  slack: circleci/slack@4.12.5 # Ref: https://github.com/mojaloop/ci-config/tree/master/slack-templates
+  pr-tools: mojaloop/pr-tools@0.1.10 # Ref: https://github.com/mojaloop/ci-config/
+  gh: circleci/github-cli@2.2.0
 
 ##
-# Executors
+# defaults
 #
-# CircleCI Executors
+# YAML defaults templates
 ##
-executors:
-  default-docker:
-    working_directory: /home/circleci/project
-    shell: "/bin/sh -leo pipefail" ## Ref: https://circleci.com/docs/env-vars/#alpine-linux
-    environment:
-      BASH_ENV: /etc/profile ## Ref: https://circleci.com/docs/env-vars/#alpine-linux
-      NVM_ARCH_UNOFFICIAL_OVERRIDE: x64-musl ## Ref: https://github.com/nvm-sh/nvm/issues/1102#issuecomment-550572252
-    docker:
-      - image: node:lts-alpine  # Ref: https://hub.docker.com/_/node?tab=tags&page=1&name=alpine
 
-  default-machine:
-    shell: "/bin/bash -leo pipefail"
-    machine:
-      image: ubuntu-2204:2023.04.2 # Ref: https://circleci.com/developer/machine/image/ubuntu-2204
-
-defaults_working_directory: &defaults_working_directory
-  working_directory: /home/circleci/project
-
+## Default 'default-docker' executor dependencies
 defaults_docker_Dependencies: &defaults_docker_Dependencies |
     apk --no-cache add git
     apk --no-cache add ca-certificates
     apk --no-cache add curl
     apk --no-cache add openssh-client
-    apk --no-cache add -t build-dependencies make gcc g++ python3 libtool autoconf automake
-    apk --no-cache add bash
+    apk add --no-cache -t build-dependencies make gcc g++ python3 libtool autoconf automake jq bash
     npm install -g node-gyp
 
 defaults_awsCliDependencies: &defaults_awsCliDependencies |
-    apk --no-cache add \
-            python3 \
-            py-pip \
-            groff \
-            less \
-            mailcap
-    pip install --upgrade awscli==1.14.5 s3cmd==2.0.1 python-magic
-    apk -v --purge del py-pip
+    apk --no-cache add aws-cli
 
 defaults_license_scanner: &defaults_license_scanner
   name: Install and set up license-scanner
   command: |
     git clone https://github.com/mojaloop/license-scanner /tmp/license-scanner
     cd /tmp/license-scanner && make build default-files set-up
+
+defaults_export_version_from_package: &defaults_export_version_from_package
+  name: Format the changelog into the github release body and get release tag
+  command: |
+    git diff --no-indent-heuristic master~1 HEAD CHANGELOG.md | sed -n '/^+[^+]/ s/^+//p' > /tmp/changes
+    echo 'export RELEASE_CHANGES=`cat /tmp/changes`' >> $BASH_ENV
+    echo 'export RELEASE_TAG=`cat package-lock.json | jq -r .version`' >> $BASH_ENV
+
+defaults_configure_git: &defaults_configure_git
+  name: Configure git
+  command: |
+    git config user.email ${GIT_CI_EMAIL}
+    git config user.name ${GIT_CI_USER}
 
 defaults_npm_auth: &defaults_npm_auth
   name: Update NPM registry auth token
@@ -74,8 +63,10 @@ defaults_configure_nvm: &defaults_configure_nvm
   name: Configure NVM
   command: |
     cd $HOME
+
     export ENV_DOT_PROFILE=$HOME/.profile
     touch $ENV_DOT_PROFILE
+
     echo "1. Export env variable"
     export NVM_DIR="$HOME/.nvm"
     if [ -z "$NVMRC_VERSION" ]; then
@@ -83,18 +74,19 @@ defaults_configure_nvm: &defaults_configure_nvm
       export NVMRC_VERSION=$(cat $CIRCLE_WORKING_DIRECTORY/.nvmrc)
       echo "export NVMRC_VERSION=$NVMRC_VERSION" >> $ENV_DOT_PROFILE
     fi
+
     if [ -f "$NVM_DIR" ]; then
       echo "==> $NVM_DIR exists. Skipping steps 2-4!"
     else 
       echo "==> $NVM_DIR does not exists. Executing steps 2-4!"
+
       echo "2. Installing NVM"
       curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+
       echo "3. Executing $NVM_DIR/nvm.sh"
       [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-      # echo "4. Update $ENV_DOT_PROFILE"
-      # echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $ENV_DOT_PROFILE
-      # echo "export NVM_DIR=$NVM_DIR" >> $ENV_DOT_PROFILE
     fi
+
     ## Ref: https://github.com/nvm-sh/nvm/issues/1102#issuecomment-550572252
     if [ ! -z "$NVM_ARCH_UNOFFICIAL_OVERRIDE" ]; then
       echo "==> Handle NVM_ARCH_UNOFFICIAL_OVERRIDE=$NVM_ARCH_UNOFFICIAL_OVERRIDE!"
@@ -102,10 +94,12 @@ defaults_configure_nvm: &defaults_configure_nvm
       echo "export NVM_NODEJS_ORG_MIRROR=https://unofficial-builds.nodejs.org/download/release" >> $ENV_DOT_PROFILE
       source $ENV_DOT_PROFILE
     fi
+
     echo "4. Installing Node version: $NVMRC_VERSION"
     nvm install $NVMRC_VERSION
     nvm alias default $NVMRC_VERSION
     nvm use $NVMRC_VERSION
+
     cd $CIRCLE_WORKING_DIRECTORY
 
 defaults_display_versions: &defaults_display_versions
@@ -117,9 +111,34 @@ defaults_display_versions: &defaults_display_versions
     echo "npm: $(npm --version)"
     echo "nvm: $(nvm --version)"
 
+##
+# Executors
+#
+# CircleCI Executors
+##
+executors:
+  default-docker:
+    working_directory: &WORKING_DIR /home/circleci/project
+    shell: "/bin/sh -leo pipefail" ## Ref: https://circleci.com/docs/env-vars/#alpine-linux
+    environment:
+      BASH_ENV: /etc/profile ## Ref: https://circleci.com/docs/env-vars/#alpine-linux
+      NVM_ARCH_UNOFFICIAL_OVERRIDE: x64-musl ## Ref: https://github.com/nvm-sh/nvm/issues/1102#issuecomment-550572252
+    docker:
+      - image: node:lts-alpine
+
+  default-machine:
+    working_directory: *WORKING_DIR
+    shell: "/bin/bash -leo pipefail"
+    machine:
+      image: ubuntu-2204:2023.04.2 # Ref: https://circleci.com/developer/machine/image/ubuntu-2204
+
+##
+# Jobs
+#
+# A map of CircleCI jobs
+##
 jobs:
   setup:
-    <<: *defaults_working_directory
     executor: default-docker
     steps:
       - run:
@@ -132,14 +151,13 @@ jobs:
           <<: *defaults_display_versions
       - run:
           name: Install NPM dependencies
-          command: npm install
+          command: npm ci
       - save_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - node_modules
 
-  test-unit:
-    <<: *defaults_working_directory
+  test-dependencies:
     executor: default-docker
     steps:
       - run:
@@ -153,6 +171,41 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
+          name: Execute dependency tests
+          command: npm run dep:check
+
+  test-lint:
+    executor: default-docker
+    steps:
+      - run:
+          name: Install general dependencies
+          command: *defaults_docker_Dependencies
+      - checkout
+      - run:
+          <<: *defaults_configure_nvm
+      - run:
+          <<: *defaults_display_versions
+      - restore_cache:
+          key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: Execute lint tests
+          command: npm run lint
+
+  test-unit:
+    executor: default-docker
+    steps:
+      - run:
+          name: Install general dependencies
+          command: *defaults_docker_Dependencies
+      - checkout
+      - run:
+          <<: *defaults_configure_nvm
+      - run:
+          <<: *defaults_display_versions
+      - restore_cache:
+          key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          # This is needed for legacy core tests. Remove this once 'tape' is fully deprecated.
           name: Install tape, tapes and tap-xunit
           command: npm install tape tapes tap-xunit
       - run:
@@ -160,7 +213,7 @@ jobs:
           command: mkdir -p ./test/results
       - run:
           name: Execute unit tests
-          command: npm -s run test:xunit > ./test/results/tape.xml
+          command: npm -s run test:xunit
       - store_artifacts:
           path: ./test/results
           destination: test
@@ -168,7 +221,6 @@ jobs:
           path: ./test/results
 
   test-coverage:
-    <<: *defaults_working_directory
     executor: default-docker
     steps:
       - run:
@@ -191,20 +243,9 @@ jobs:
           path: coverage
           destination: test
       - store_test_results:
-          path: coverage/lcov.info
-      - run:
-          name: Copy code coverage to SonarQube
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ];
-            then
-                echo "Sending lcov.info to SonarQube..."
-                aws s3 cp coverage/lcov.info $AWS_S3_DIR_SONARQUBE/$CIRCLE_PROJECT_REPONAME/lcov.info
-            else
-                echo "Not a release (env CIRCLE_BRANCH != 'master'), skipping sending lcov.info to SonarQube."
-            fi
+          path: coverage
 
   vulnerability-check:
-    <<: *defaults_working_directory
     executor: default-docker
     steps:
       - run:
@@ -222,13 +263,12 @@ jobs:
           command: mkdir -p ./audit/results
       - run:
           name: Check for new npm vulnerabilities
-          command: npm run audit:check --silent -- --json > ./audit/results/auditResults.json
+          command: npm run audit:check -- -o json > ./audit/results/auditResults.json
       - store_artifacts:
           path: ./audit/results
           destination: audit
 
   audit-licenses:
-    <<: *defaults_working_directory
     executor: default-docker
     steps:
       - run:
@@ -237,8 +277,6 @@ jobs:
       - run:
           <<: *defaults_license_scanner
       - checkout
-      - run:
-          <<: *defaults_display_versions
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
@@ -248,31 +286,72 @@ jobs:
           path: /tmp/license-scanner/results
           destination: licenses
 
-  publish-snapshot:
-    <<: *defaults_working_directory
+  release:
     executor: default-docker
     steps:
       - run:
           name: Install general dependencies
           command: *defaults_docker_Dependencies
       - checkout
+      - restore_cache:
+          keys:
+          - dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: setup environment vars for SNAPSHOT release
-          command: |
-            echo 'export RELEASE_TAG=$RELEASE_TAG_SNAPSHOT' >> $BASH_ENV
+          <<: *defaults_configure_git
       - run:
           name: Setup Slack config
           command: |
             echo "export SLACK_PROJECT_NAME=${CIRCLE_PROJECT_REPONAME}" >> $BASH_ENV
-            echo "export SLACK_RELEASE_TYPE='NPM Snapshot'" >> $BASH_ENV
-            echo "export SLACK_RELEASE_TAG=v${CIRCLE_TAG:1}" >> $BASH_ENV
-            echo "export SLACK_RELEASE_URL=https://www.npmjs.com/package/@mojaloop/${CIRCLE_PROJECT_REPONAME}/v/${CIRCLE_TAG:1}" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TYPE='GitHub Release'" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TAG='${RELEASE_TAG} on ${CIRCLE_BRANCH} branch'" >> $BASH_ENV
             echo "export SLACK_BUILD_ID=${CIRCLE_BUILD_NUM}" >> $BASH_ENV
             echo "export SLACK_CI_URL=${CIRCLE_BUILD_URL}" >> $BASH_ENV
       - run:
-          <<: *defaults_npm_auth
+          name: Generate changelog and bump package version
+          command: npm run release -- --no-verify
       - run:
-          <<: *defaults_npm_publish_release
+          name: Push the release
+          command: git push --follow-tags origin ${CIRCLE_BRANCH}
+      - slack/notify:
+          event: fail
+          template: SLACK_TEMP_RELEASE_FAILURE
+
+  github-release:
+    executor: default-machine
+    shell: "/bin/bash -eo pipefail"
+    steps:
+      - run:
+          name: Install git
+          command: |
+            sudo apt-get update && sudo apt-get install -y git
+      - gh/install
+      - checkout
+      - run:
+          <<: *defaults_configure_git
+      - run:
+          name: Fetch updated release branch
+          command: |
+            git fetch origin
+            git checkout origin/${CIRCLE_BRANCH}
+      - run:
+          <<: *defaults_export_version_from_package
+      - run:
+          name: Check the release changes
+          command: |
+            echo "Changes are: ${RELEASE_CHANGES}"
+      - run:
+          name: Setup Slack config
+          command: |
+            echo "export SLACK_PROJECT_NAME=${CIRCLE_PROJECT_REPONAME}" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TYPE='Github Release'" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TAG=v${RELEASE_TAG}" >> $BASH_ENV
+            echo "export SLACK_RELEASE_URL=https://github.com/mojaloop/${CIRCLE_PROJECT_REPONAME}/releases/tag/v${RELEASE_TAG}" >> $BASH_ENV
+            echo "export SLACK_BUILD_ID=${CIRCLE_BUILD_NUM}" >> $BASH_ENV
+            echo "export SLACK_CI_URL=${CIRCLE_BUILD_URL}" >> $BASH_ENV
+      - run:
+          name: Create Release
+          command: |
+            gh release create "v${RELEASE_TAG}" --title "v${RELEASE_TAG} Release" --draft=false --notes "${RELEASE_CHANGES}" ./CHANGELOG.md
       - slack/notify:
           event: pass
           template: SLACK_TEMP_RELEASE_SUCCESS
@@ -281,17 +360,23 @@ jobs:
           template: SLACK_TEMP_RELEASE_FAILURE
 
   publish:
-    <<: *defaults_working_directory
     executor: default-docker
     steps:
       - run:
           name: Install general dependencies
           command: *defaults_docker_Dependencies
       - checkout
+      - restore_cache:
+          key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: setup environment vars for LATEST release
+          name: Setup for LATEST release
           command: |
-            echo 'export RELEASE_TAG=$RELEASE_TAG_PROD' >> $BASH_ENV
+            echo "export RELEASE_TAG=$RELEASE_TAG_PROD" >> $BASH_ENV
+            echo "RELEASE_TAG=$RELEASE_TAG_PROD"
+
+            PACKAGE_VERSION=$(cat package-lock.json | jq -r .version)
+            echo "export PACKAGE_VERSION=${PACKAGE_VERSION}" >> $BASH_ENV
+            echo "PACKAGE_VERSION=${PACKAGE_VERSION}"
       - run:
           name: Setup Slack config
           command: |
@@ -312,7 +397,7 @@ jobs:
           event: fail
           template: SLACK_TEMP_RELEASE_FAILURE
 
-  release:
+  publish-snapshot:
     executor: default-docker
     steps:
       - run:
@@ -320,69 +405,32 @@ jobs:
           command: *defaults_docker_Dependencies
       - checkout
       - restore_cache:
-          keys:
-          - dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
+          key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: Configure git
+          name: Setup for SNAPSHOT release
           command: |
-            git config user.email ${GIT_CI_EMAIL}
-            git config user.name ${GIT_CI_USER}
-            git checkout ${CIRCLE_BRANCH}
-      - run:
-          name: Configure ssh
-          command: |
-            mkdir -p ~/.ssh
-            ssh-keyscan -p 443 ssh.github.com >> ~/.ssh/known_hosts
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-      - run:
-          name: Generate changelog and bump package version
-          command: npm run release
-      - run:
-          name: Push the release
-          command: git push --follow-tags origin ${CIRCLE_BRANCH}
+            echo "export RELEASE_TAG=${RELEASE_TAG_SNAPSHOT}" >> $BASH_ENV
+            echo "RELEASE_TAG=${RELEASE_TAG_SNAPSHOT}"
 
-  github-release:
-    executor: default-machine
-    shell: "/bin/bash -eo pipefail"
-    steps:
-      - run:
-          name: Install git
-          command: |
-            sudo apt-get update && sudo apt-get install -y git
-      - checkout
-      - run:
-          name: Fetch updated release branch
-          command: |
-            git config user.email ${GIT_CI_EMAIL}
-            git config user.name ${GIT_CI_USER}
-            git fetch origin
-            git checkout origin/${CIRCLE_BRANCH}
-      - run:
-          # Note: this is rather imperfect, but will do for now
-          name: Format the changelog into the github release body and get release tag
-          command: |
-            git diff --no-indent-heuristic master~1 HEAD CHANGELOG.md | sed -n '/^+[^+]/ s/^+//p' > /tmp/changes
-            echo 'export RELEASE_CHANGES=`cat /tmp/changes`' >> $BASH_ENV
-            echo 'export RELEASE_TAG=`cat package-lock.json | jq -r .version`' >> $BASH_ENV
-      - run:
-          name: check the release changes
-          command: |
-            echo "Changes are: ${RELEASE_CHANGES}"
+            echo "Override package version: ${CIRCLE_TAG:1}"
+            npx standard-version --skip.tag --skip.commit --skip.changelog --release-as ${CIRCLE_TAG:1}
+
+            PACKAGE_VERSION=$(cat package-lock.json | jq -r .version)
+            echo "export PACKAGE_VERSION=${PACKAGE_VERSION}" >> $BASH_ENV
+            echo "PACKAGE_VERSION=${PACKAGE_VERSION}"
       - run:
           name: Setup Slack config
           command: |
             echo "export SLACK_PROJECT_NAME=${CIRCLE_PROJECT_REPONAME}" >> $BASH_ENV
-            echo "export SLACK_RELEASE_TYPE='Github Release'" >> $BASH_ENV
-            echo "export SLACK_RELEASE_TAG=v${RELEASE_TAG}" >> $BASH_ENV
-            echo "export SLACK_RELEASE_URL=https://github.com/mojaloop/${CIRCLE_PROJECT_REPONAME}/releases/tag/v${RELEASE_TAG}" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TYPE='NPM Snapshot'" >> $BASH_ENV
+            echo "export SLACK_RELEASE_TAG=v${CIRCLE_TAG:1}" >> $BASH_ENV
+            echo "export SLACK_RELEASE_URL=https://www.npmjs.com/package/@mojaloop/${CIRCLE_PROJECT_REPONAME}/v/${CIRCLE_TAG:1}" >> $BASH_ENV
             echo "export SLACK_BUILD_ID=${CIRCLE_BUILD_NUM}" >> $BASH_ENV
             echo "export SLACK_CI_URL=${CIRCLE_BUILD_URL}" >> $BASH_ENV
-      - github-release/create:
-          github-token-variable: ${GITHUB_TOKEN}
-          tag: v${RELEASE_TAG}
-          title: v${RELEASE_TAG} Release
-          description: ${RELEASE_CHANGES}
-          file-path: CHANGELOG.md
+      - run:
+          <<: *defaults_npm_auth
+      - run:
+          <<: *defaults_npm_publish_release
       - slack/notify:
           event: pass
           template: SLACK_TEMP_RELEASE_SUCCESS
@@ -397,6 +445,28 @@ workflows:
           context: org-global
       - setup:
           context: org-global
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore:
+                - /feature*/
+                - /bugfix*/
+      - test-dependencies:
+          context: org-global
+          requires:
+            - setup
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore:
+                - /feature*/
+                - /bugfix*/
+      - test-lint:
+          context: org-global
+          requires:
+            - setup
           filters:
             tags:
               only: /.*/
@@ -453,7 +523,8 @@ workflows:
           context: org-global
           requires:
             - pr-tools/pr-title-check
-            - setup
+            - test-dependencies
+            - test-lint
             - test-unit
             - test-coverage
             - vulnerability-check
@@ -476,7 +547,7 @@ workflows:
           context: org-global
           requires:
             - pr-tools/pr-title-check
-            - setup
+            - test-lint
             - test-unit
             - test-coverage
             - vulnerability-check
@@ -491,7 +562,7 @@ workflows:
           context: org-global
           requires:
             - pr-tools/pr-title-check
-            - setup
+            - test-lint
             - test-unit
             - test-coverage
             - vulnerability-check
